--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -23,6 +23,10 @@
             <input type="text" class="form-control" name="email">
         </div>
         <div class="form-group">
+            <label>User Name</label>
+            <input type="text" class="form-control" name="userName">
+        </div>
+        <div class="form-group">
             <label>Password</label>
             <input type="password" class="form-control" name="password">
         </div>
