Setting up the homepage

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,33 +1,18 @@
-<!doctype html>
-<html>
-
-<head>
-    <title>Learn Languages by chatting with People around the world</title>
-    <link rel="stylesheet"
-        href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-    <link rel="stylesheet"
-        href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-    <div class="container">
-
-        <div class="jumbotron text-center">
-            <h1>Learn Languages by chatting with People around the world</h1>
-            <img src="https://www.pandatree.com/images/book/book-link01.jpg"
-                alt="books">
-
-            <p>Login or Signup:</p>
-
-            <a href="/login" class="btn btn-default"><span
-                    class="fa fa-user"></span>Login</a>
-            <a href="/signup" class="btn btn-default"><span
-                    class="fa fa-user"></span>Signup</a>
-
-        </div>
-
-    </div>
-</body>
-
+<!DOCTYPE html>
+<html style="font-size: 16px">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="keywords" content="Chat with Us" />
+    <meta name="description" content="" />
+    <meta name="page_type" content="np-template-header-footer-from-plugin" />
+    <title>IBMA Homepage</title>
+    <link rel="stylesheet" href="/css/icons.css" media="screen" />
+    <link rel="stylesheet" href="/css/index.css" media="screen" />
+    <link
+      id="u-theme-google-font"
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
+    />
+  </head>
 </html>
