--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,4 +15,20 @@
       href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
     />
   </head>
+  <body
+    data-home-page="index.ejs"
+    data-home-page-title="Homepage"
+    class="u-body"
+  >
+    <footer
+      class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
+      id="sec-9a05"
+    >
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <p class="u-small-text u-text u-text-variant u-text-1">
+          @IBMA 2021<br />
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
