added main message

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,28 @@
     data-home-page-title="Homepage"
     class="u-body"
   >
+    <section
+      class="skrollable u-align-center u-clearfix u-image u-shading u-section-1"
+      id="sec-46c6"
+      data-image-width="1980"
+      data-image-height="806"
+    >
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <h1 class="u-text u-text-1">
+          Learn&nbsp;Languages&nbsp;by&nbsp;chatting&nbsp;with&nbsp;People&nbsp;around&nbsp;the&nbsp;world<br />
+        </h1>
+        <p class="u-text u-text-grey-10 u-text-2">
+          The best time spent learning is chatting and getting to know new
+          people. Learn more about&nbsp;<a
+            href="/"
+            class="u-active-none u-border-1 u-border-white u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-btn-1"
+            >IBMA</a
+          >
+        </p>
+        <div class="u-expanded-width u-list u-repeater u-list-1"></div>
+      </div>
+    </section>
+
     <footer
       class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
       id="sec-9a05"
