--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,29 @@
             >IBMA</a
           >
         </p>
-        <div class="u-expanded-width u-list u-repeater u-list-1"></div>
+        <div class="u-expanded-width u-list u-repeater u-list-1">
+          <div
+            class="u-align-center u-container-style u-list-item u-repeater-item u-white u-list-item-1"
+          >
+            <div
+              class="u-container-layout u-similar-container u-valign-top u-container-layout-1"
+            >
+              <span
+                class="u-icon u-icon-circle u-palette-2-base u-spacing-31 u-icon-1"
+              >
+                <img src="/img/sign-up.svg" alt="" />
+              </span>
+              <h3
+                class="u-align-center-sm u-text u-text-palette-2-base u-text-3"
+              >
+                <a href="/signup" class="btn btn-default"
+                  ><span class="fa fa-user"></span>Sign Up</a
+                >
+              </h3>
+              <p class="u-text u-text-4">Join our friendly community!</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
