added login button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,6 +60,27 @@
               <p class="u-text u-text-4">Join our friendly community!</p>
             </div>
           </div>
+          <div
+            class="u-align-center u-container-style u-list-item u-repeater-item u-white u-list-item-2"
+          >
+            <div
+              class="u-container-layout u-similar-container u-valign-top u-container-layout-2"
+            >
+              <span
+                class="u-icon u-icon-circle u-palette-2-base u-spacing-31 u-icon-2"
+              >
+                <img src="/img/login.svg" alt="" />
+              </span>
+              <h3
+                class="u-align-center-sm u-text u-text-palette-2-base u-text-5"
+              >
+                <a href="/login" class="btn btn-default"
+                  ><span class="fa fa-user"></span>Login</a
+                >
+              </h3>
+              <p class="u-text u-text-6">Welcome back!</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
