--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,5 +15,15 @@
     />
     <!-- CSS AND BOOSTRAP END -->
   </head>
-  <body></body>
+  <body>
+    <section class="Form my-4 mx-5">
+      <div class="container">
+        <div class="row g-0">
+          <% if (message.length > 0) { %>
+          <div class="alert alert-danger"><%= message %></div>
+          <% } %>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
