--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,6 +22,13 @@
           <% if (message.length > 0) { %>
           <div class="alert alert-danger"><%= message %></div>
           <% } %>
+             <div class="col-sm-5">
+            <img
+              src="https://i.pinimg.com/originals/66/0e/da/660edaa94e8b180f26b2b40ac50c96dc.jpg"
+              alt=""
+              srcset=""
+              class="img-fluid"
+            />
         </div>
       </div>
     </section>
