--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,6 +30,22 @@
               class="img-fluid"
             />
         </div>
+        <div class="col-lg-7 px-5 pt-5 my-5">
+          <h4>Sign into your account</h4>
+            <form action="/login" method="post">
+              <div class="form-row">
+                  <div class="col-lg-7">
+                      <label>Email</label>
+                    <input
+                    name="email"
+                      type="email"
+                      placeholder="Email"
+                      class="form-control my-3 p-2"
+                    />
+                  </div>
+                </div>
+            </form>
+        </div>
       </div>
     </section>
   </body>
