homepage edit and nav bar added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,11 @@
     <meta name="description" content="" />
     <meta name="page_type" content="np-template-header-footer-from-plugin" />
     <title>IBMA Homepage</title>
+    <link rel="stylesheet"
+    href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+<link rel="stylesheet"
+    href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
     <link rel="stylesheet" href="/css/icons.css" media="screen" />
     <link rel="stylesheet" href="/css/index.css" media="screen" />
     <link
@@ -20,80 +25,121 @@
     data-home-page-title="Homepage"
     class="u-body"
   >
+
+
+
+  <div class="wrapper">
+    <div class="sidebar">
+        <h2>IBMA</h2>
+        <ul>
+            <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="/about"><i class="fas fa-address-card"></i> About</a></li>
+            <li><a href="/faq"><i class="fas fa-question"></i> FAQ</a></li>
+            <li><a href="/contact"><i class="fas fa-address-book"></i> Contact</a></li>
+           
+        </ul> 
+        <div class="social_media">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+      </div>
+    </div>
+    <div class="main_content">
     <section
-      class="skrollable u-align-center u-clearfix u-image u-shading u-section-1"
-      id="sec-46c6"
-      data-image-width="1980"
-      data-image-height="806"
-    >
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-text u-text-1">
-          Learn&nbsp;Languages&nbsp;by&nbsp;chatting&nbsp;with&nbsp;People&nbsp;around&nbsp;the&nbsp;world<br />
-        </h1>
-        <p class="u-text u-text-grey-10 u-text-2">
-          The best time spent learning is chatting and getting to know new
-          people. Learn more about&nbsp;<a
-            href="/"
-            class="u-active-none u-border-1 u-border-white u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-btn-1"
-            >IBMA</a
-          >
-        </p>
-        <div class="u-expanded-width u-list u-repeater u-list-1">
+    class="skrollable u-align-center u-clearfix u-image u-shading u-section-1"
+    id="sec-46c6"
+    data-image-width="1980"
+    data-image-height="806"
+  >
+    <div class="u-clearfix u-sheet u-sheet-1">
+      <h1 class="u-text u-text-1">
+        Learn&nbsp;Languages&nbsp;by&nbsp;chatting&nbsp;with&nbsp;People&nbsp;around&nbsp;the&nbsp;world<br />
+      </h1>
+      <p class="u-text u-text-grey-10 u-text-2">
+        The best time spent learning is chatting and getting to know new
+        people. Learn more about&nbsp;<a
+          href="/"
+          class="u-active-none u-border-1 u-border-white u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-btn-1"
+          >IBMA</a
+        >
+      </p>
+      <div class="u-expanded-width u-list u-repeater u-list-1">
+        <div
+          class="u-align-center u-container-style u-list-item u-repeater-item u-white u-list-item-1"
+        >
           <div
-            class="u-align-center u-container-style u-list-item u-repeater-item u-white u-list-item-1"
+            class="u-container-layout u-similar-container u-valign-top u-container-layout-1"
           >
-            <div
-              class="u-container-layout u-similar-container u-valign-top u-container-layout-1"
+            <span
+              class="u-icon u-icon-circle u-palette-2-base u-spacing-31 u-icon-1"
             >
-              <span
-                class="u-icon u-icon-circle u-palette-2-base u-spacing-31 u-icon-1"
+              <img src="/img/sign-up.svg" alt="" />
+            </span>
+            <h3
+              class="u-align-center-sm u-text u-text-palette-2-base u-text-3"
+            >
+              <a href="/signup" class="btn btn-default"
+                ><span class=""></span>Sign Up</a
               >
-                <img src="/img/sign-up.svg" alt="" />
-              </span>
-              <h3
-                class="u-align-center-sm u-text u-text-palette-2-base u-text-3"
-              >
-                <a href="/signup" class="btn btn-default"
-                  ><span class="fa fa-user"></span>Sign Up</a
-                >
-              </h3>
-              <p class="u-text u-text-4">Join our friendly community!</p>
-            </div>
+            </h3>
+            <p class="u-text u-text-4">Join our friendly community!</p>
           </div>
+        </div>
+        <div
+          class="u-align-center u-container-style u-list-item u-repeater-item u-white u-list-item-2"
+        >
           <div
-            class="u-align-center u-container-style u-list-item u-repeater-item u-white u-list-item-2"
+            class="u-container-layout u-similar-container u-valign-top u-container-layout-2"
           >
-            <div
-              class="u-container-layout u-similar-container u-valign-top u-container-layout-2"
+            <span
+              class="u-icon u-icon-circle u-palette-2-base u-spacing-31 u-icon-2"
             >
-              <span
-                class="u-icon u-icon-circle u-palette-2-base u-spacing-31 u-icon-2"
+              <img src="/img/login.svg" alt="" />
+            </span>
+            <h3
+              class="u-align-center-sm u-text u-text-palette-2-base u-text-5"
+            >
+              <a href="/login" class="btn btn-default"
+                ><span class=""></span>Login</a
               >
-                <img src="/img/login.svg" alt="" />
-              </span>
-              <h3
-                class="u-align-center-sm u-text u-text-palette-2-base u-text-5"
-              >
-                <a href="/login" class="btn btn-default"
-                  ><span class="fa fa-user"></span>Login</a
-                >
-              </h3>
-              <p class="u-text u-text-6">Welcome back!</p>
-            </div>
+            </h3>
+            <p class="u-text u-text-6">Welcome back!</p>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <footer
-      class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
-      id="sec-9a05"
-    >
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">
-          @IBMA 2021<br />
-        </p>
-      </div>
-    </footer>
+  <footer
+    class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
+    id="sec-9a05"
+  >
+    <div class="u-clearfix u-sheet u-sheet-1">
+      <p class="u-small-text u-text u-text-variant u-text-1">
+        @IBMA 2021<br />
+      </p>
+    </div>
+  </footer>
+
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   </body>
 </html>
