email form added to login

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,6 +30,7 @@
               class="img-fluid"
             />
         </div>
+
         <div class="col-lg-7 px-5 pt-5 my-5">
           <h4>Sign into your account</h4>
             <form action="/login" method="post">
@@ -41,6 +42,18 @@
                       type="email"
                       placeholder="Email"
                       class="form-control my-3 p-2"
+                    />
+                  </div>
+                </div>
+
+                   <div class="form-row">
+                  <div class="col-lg-7">
+                      <label>Password</label>
+                    <input
+                      name="password"
+                      type="password"
+                      placeholder="Password"
+                      class="form-control my-3 p-2" 
                     />
                   </div>
                 </div>
