login button added

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -57,6 +57,12 @@
                     />
                   </div>
                 </div>
+
+                  <div class="form-row">
+                  <div class="col-lg-7">
+                    <button type="submit" class="btn1  mt-1 mb-5">Login</button>
+                  </div>
+                </div>
             </form>
         </div>
       </div>
