login sign up and home links added

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -63,6 +63,8 @@
                     <button type="submit" class="btn1  mt-1 mb-5">Login</button>
                   </div>
                 </div>
+                  <p>Don't have an account? <a href="/signup">Register Here</a></p>
+                 <p>Or go <a href="/">Home</a></p>
             </form>
         </div>
       </div>
