--- a/public/login.css
+++ b/public/login.css
@@ -11,3 +11,7 @@
   border-radius: 30px;
   box-shadow: 12px 12px 22px black;
 }
+.img {
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
+}
