login button styles added

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -60,7 +60,7 @@
 
                   <div class="form-row">
                   <div class="col-lg-7">
-                    <button type="submit" class="btn1  mt-1 mb-5">Login</button>
+                    <button type="submit" class="login-btn  mt-1 mb-5">Login</button>
                   </div>
                 </div>
                   <p>Don't have an account? <a href="/signup">Register Here</a></p>
