--- a/public/login.css
+++ b/public/login.css
@@ -15,3 +15,11 @@
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
 }
+.login-btn {
+  border: none;
+  outline: none;
+  height: 50px;
+  width: 100%;
+  border-radius: 5px;
+  font-weight: bold;
+}
