--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -51,7 +51,7 @@
                         <div class="panel panel-default ">
                             <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
                                  <h4 class="panel-title">
-                                    <a href="#" class="ing">Q: What is Lorem Ipsum?</a>
+                                    <a href="#" class="ing">Q: What is IBMA Chat App</a>
                               </h4>
                 
                             </div>
@@ -59,7 +59,9 @@
                                 <div class="panel-body">
                                      <h5><span class="label label-primary">Answer</span></h5>
                 
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five <a href="http://jquery2dotnet.com/" class="label label-success">http://jquery2dotnet.com/</a> centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                    <p> IBMA Chat App is a platform that lets you Learn Languages anywhere. You can connect with other people around the 
+                                        world and start speaking in your target language that you are learning. After signing up, you can join any room
+                                        and start speaking with those in the room.
                                         </p>
                                 </div>
                             </div>
@@ -67,45 +69,46 @@
                         <div class="panel panel-default ">
                             <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
                                  <h4 class="panel-title">
-                                    <a href="#" class="ing">Q: Why do we use it?</a>
+                                    <a href="#" class="ing">Q: Is IBMA free or subscribtion based?</a>
                               </h4>
                 
                             </div>
                             <div id="question1" class="panel-collapse collapse" style="height: 0px;">
                                 <div class="panel-body">
                                      <h5><span class="label label-primary">Answer</span></h5>
-                
-                                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+                                    <p>IBMA is currently free for everyone. Please enjoy using our app</p>
                                 </div>
                             </div>
                         </div>
                         <div class="panel panel-default ">
                             <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question2">
                                  <h4 class="panel-title">
-                                    <a href="#" class="ing">Q: Where does it come from?</a>
+                                    <a href="#" class="ing">Q: Do I have to speak only one language in the rooms? Can I speak in my mother tongue</a>
                               </h4>
                 
                             </div>
                             <div id="question2" class="panel-collapse collapse" style="height: 0px;">
                                 <div class="panel-body">
                                      <h5><span class="label label-primary">Answer</span></h5>
-                
-                                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+                                        <p>Everyone is at different levels. If you dont know how to say something, please feel free to ask in your mother tongue how to say something. But try 
+                                            your best to speak only the specific language for that room.
+                                        </p>
                                 </div>
                             </div>
                         </div>
                         <div class="panel panel-default ">
                             <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question3">
                                  <h4 class="panel-title">
-                                    <a href="#" class="ing">Q: Where can I get some?</a>
+                                    <a href="#" class="ing">Q: What is the best way to use this platform and learn a new language</a>
                               </h4>
                 
                             </div>
                             <div id="question3" class="panel-collapse collapse" style="height: 0px;">
                                 <div class="panel-body">
                                      <h5><span class="label label-primary">Answer</span></h5>
-                
-                                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. </p>
+                                        <p>The best way to use this platform is to engage in your target Languages room and speak daily or on a consistent basis.
+                                            If you can try not to use your mother tongue, and also use a dictionary for any words that you do not know.
+                                        </p>
                                 </div>
                             </div>
                         </div>
