fixed input values for profile form

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -62,9 +62,9 @@
                         <option name="roomId" value="Spanish">Spanish</option>
                         <option name="roomId" value="Arabic">Arabic</option>
                         <option name="roomId"  value="English">English</option>
-                        <option name="roomId" value="Spanish">French</option>
-                        <option name="roomId" value="Arabic">Chinese</option>
-                        <option name="roomId"  value="English">Russian</option>
+                        <option name="roomId" value="French">French</option>
+                        <option name="roomId" value="Chinese">Chinese</option>
+                        <option name="roomId"  value="Russian">Russian</option>
                       </select>
                     </div>
                     <button type="submit" class="btn">Join Chat</button>
