--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="register.css" />
+    <link rel="stylesheet" href="signup.css" />
   </head>
   <body>
     <section class="Form my-4 mx-5">
