signup functionality added

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -35,6 +35,7 @@
                 <div class="form-row">
                   <div class="col-lg-7">
                     <input
+                    name="email"
                       type="email"
                       placeholder="Email"
                       class="form-control my-3 p-2"
@@ -44,6 +45,16 @@
                 <div class="form-row">
                   <div class="col-lg-7">
                     <input
+                      name="userName"
+                      type="userName"
+                      placeholder="User Name"
+                      class="form-control my-3 p-2" 
+                    />
+                  </div>
+                   <div class="form-row">
+                  <div class="col-lg-7">
+                    <input
+                    name="password"
                       type="password"
                       placeholder="Password"
                       class="form-control my-3 p-2" 
@@ -52,7 +63,7 @@
                 </div>
                 <div class="form-row">
                   <div class="col-lg-7">
-                    <button type="button" class="btn1  mt-1 mb-5">Register</button>
+                    <button type="submit" class="btn1  mt-1 mb-5">Register</button>
                   </div>
                 </div>
                 <p>Already have an account? <a href="/login">Login</a></p>
