commiting to push changes

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -39,7 +39,7 @@
 					</div> -->
       </div>
     </main>
-    <div class="chat-form-container">
+    <div class="chat-form-container overflow-auto">
       <form id="chat-form">
         <input
           id="msg"
