--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -51,10 +51,10 @@
                         type="text"
                         name="username"
                         id="username"
-                        value="<%= user.local.email %>"
+                        value="<%= user.name %>"
                         hidden
                       /> 
-                      <h6>Username: <%= user.local.email %></h6>
+                      <h6>Username: <%= user.name %></h6>
                     </div>
                     <div class="form-control">
                       <label for="room">Room</label>
