updated about page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,64 +1,152 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Learn Languages by chatting with People around the world</title>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link
+      href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"
+      rel="stylesheet"
+      id="bootstrap-css"
+    />
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet"
-        href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-        <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
-    <link rel="stylesheet" href="css/index.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"
+    />
+    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+    <link rel="stylesheet" href="css/index.css" />
+  </head>
 
-<body>
-
-
+  <body>
     <div class="wrapper">
-        <div class="sidebar">
-            <h2>IBMA</h2>
-            <ul>
-                <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="/about"><i class="fas fa-address-card"></i> About</a></li>
-                <li><a href="/faq"><i class="fas fa-question"></i> FAQ</a></li>
-                <li><a href="/contact"><i class="fas fa-address-book"></i> Contact</a></li>
-               
-            </ul> 
-            <div class="social_media">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
+      <div class="sidebar">
+        <h2>IBMA</h2>
+        <ul>
+          <li>
+            <a href="/"><i class="fas fa-home"></i> Home</a>
+          </li>
+          <li>
+            <a href="/about"><i class="fas fa-address-card"></i> About</a>
+          </li>
+          <li>
+            <a href="/faq"><i class="fas fa-question"></i> FAQ</a>
+          </li>
+          <li>
+            <a href="/contact"><i class="fas fa-address-book"></i> Contact</a>
+          </li>
+        </ul>
+        <div class="social_media">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+      <div class="main_content">
+        <div class="header">
+          <div>Welcome to IBMA</div>
+          <div>
+            <a href="/login" class="btn btn-primary"
+              ><span class="fa fa-user"></span>Login</a
+            >
+            <a href="/signup" class="btn btn-default"
+              ><span class="fa fa-user"></span>Signup</a
+            >
           </div>
         </div>
-        <div class="main_content">
-            <div class="header">
-                <div>Welcome to IBMA</div>
-                <div>
-                    <a href="/login" class="btn btn-primary"><span
-                        class="fa fa-user"></span>Login</a>
-                <a href="/signup" class="btn btn-default"><span
-                        class="fa fa-user"></span>Signup</a>
+        <div class="info">
+          <img
+            class="banner"
+            src="https://kellysthoughtsonthings.com/wp-content/uploads/2015/07/babbelbanner.png"
+            alt=""
+          />
+          <div class="container-about">
+            <h1>Discover the social way to learn languages</h1>
+            <div class="text-picture">
+              <div class="container">
+                <div class="row">
+                  <div class="col-sm-6 text-picture__text">
+                    <h2>Worldwide language learning community</h2>
+                    <h4>
+                      Meet people from 180+ countries, speaking 110+ languages.
+                    </h4>
+                  </div>
+                  <div class="col-sm-6 text-picture__picture">
+                    <img
+                      src="/img/world.png"
+                      alt="Image"
+                      class="img-responsive"
+                    />
+                  </div>
                 </div>
-               </div>  
-            <div class="info">
-             
-                <!-- THIS IS WHERE THE CODE GOES -->
-
-
-
-
-
-
+              </div>
             </div>
+
+            <div class="text-picture text-picture--gray-bg">
+              <div class="container">
+                <div class="row">
+                  <div class="col-sm-6 col-sm-push-6 text-picture__text">
+                    <h2>Find your perfect language partners</h2>
+                    <h4>
+                      Talk to people who share your interests and passions.
+                    </h4>
+                  </div>
+                  <div class="col-sm-6 col-sm-pull-6 text-picture__picture">
+                    <img
+                      src="/img/language.png"
+                      alt="Image"
+                      class="img-responsive"
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="text-picture">
+              <div class="container">
+                <div class="row row--flex">
+                  <div
+                    class="col-sm-6 row--flex__col--center text-picture__text"
+                  >
+                    <h2>Fully dedicated environment</h2>
+                    <h4>
+                      You can chat, make audio and video calls directly from
+                      your browser.
+                    </h4>
+                  </div>
+                  <div class="col-sm-6 text-picture__picture">
+                    <img
+                      src="/img/video.png"
+                      alt="Image"
+                      class="img-responsive"
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="text-picture text-picture--gray-bg">
+              <div class="container">
+                <div class="row row--flex">
+                  <div
+                    class="col-sm-6 row--flex__col--center col-sm-push-6 text-picture__text"
+                  >
+                    <h2>Practice makes perfect</h2>
+                    <h4>Go live and start talking.</h4>
+                  </div>
+                  <div class="col-sm-6 col-sm-pull-6 text-picture__picture">
+                    <img
+                      src="/img/live.png"
+                      alt="Image"
+                      class="img-responsive"
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-
-
-
-
-
-</body>
-
+  </body>
 </html>
