--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -62,6 +62,9 @@
           <button class="btn">Send</button>
         </form>
       </div>
+        <div class="container">
+    <iframe src=https://tokbox.com/embed/embed/ot-embed.js?embedId=8fd202f4-9d4a-4b7c-9ee6-ad32909e78f0&room=<%= roomId %>&iframe=true" width="800px" height="640px" scrolling="auto" allow="microphone; camera" ></iframe>
+        </div>
     </div>
 
     <script
