--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -62,7 +62,7 @@
           <button class="btn">Send</button>
         </form>
       </div>
-        <div class="container">
+        <div class="videoFrame">
     <iframe src=https://tokbox.com/embed/embed/ot-embed.js?embedId=8fd202f4-9d4a-4b7c-9ee6-ad32909e78f0&room=<%= roomId %>&iframe=true" width="800px" height="640px" scrolling="auto" allow="microphone; camera" ></iframe>
         </div>
     </div>
