--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -60,6 +60,7 @@
                       class="form-control my-3 p-2" 
                     />
                   </div>
+                  <h6>Email and password must be 5 characters or more</h6> 
                 </div>
                 <div class="form-row">
                   <div class="col-lg-7">
